syntax = "proto3";
package roles;

/** A singular role */
message Role {
    // role name
    string name = 1;

    // optional human description
    optional string desc = 2;

    // list of groups to which this role is granted
    repeated string granted_to = 3;
}

/** Add role request */
message AddRoleRequest {
    // role name to add
    string name = 1;

    // optional human description
    optional string desc = 2;

    // list of groups to which this role is granted
    repeated string granted_to = 3;
}

/** Modify role request */
message ModifyRoleRequest {
    // role name to add
    string name = 1;

    // optional human description
    optional string desc = 2;

    // list of groups to which this role is granted
    repeated string granted_to = 3;
}

/** Remove role request */
message RemoveRoleRequest {
    // role name to delete
    string name = 1;
}

/** Get all roles request */
message GetRolesRequest {
    // filter by this exact name
    optional string name = 1;
}

/** Single role response */
message RoleResponse {
    // the role
    Role role = 1;
}

/** Multiple role response */
message MultiRoleResponse {
    // the roles
    repeated Role roles = 1;
}